--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
 		<textarea class='name-text-field'></textarea>
 		<button onclick="process();">Import</button>
 	</div>
+	<div class='enter-names'>
+		<p>Upload csv file:</p>
+		<textarea ></textarea>
+		<button onclick="process();">Import</button>
+	</div>
 </body>
 </html>
