--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<textarea class='name-text-field'></textarea>
 		<button onclick="process();">Import</button>
 	</div>
-	<div >
+	<div class='enter-names' >
 		<p>Upload csv file:</p>
 		<textarea ></textarea>
 		<button onclick="process();">Import</button>
